# multimodal-conv-gents

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-testpypi.yml
_outputs/code/: tmp_code_37f86c1b94d9f90c714448f0524b386d.py
agents/: requirements.txt
agents/conversation_langchain/: agents.py  main.py
agents/dialogue/: agents.py  chat.py  initiator.py  main.py  transition.py  utils.py
agents/ontology/: __init__.py  chats.py  opentable.py  parser.py  vqa.py
agents/utils/: logger.py  registry.py  settings.py
agents/vision/: chains.py  gptv.py
agents/zero_shot/: main.py
app/: main.py
conf/: OAI_CONFIG_LIST_sample.txt  config.yaml  longevity_podcast.yaml
conf/conversation/: default.yaml  supervisor.yaml
conf/dialogue/: characters.yaml  default.yaml  system_prompts.yaml  test.yaml
notebooks/: groq-lc.ipynb  quickstart.ipynb
notebooks/autogen/: Copy_of_agentchat_groupchat_RAG.ipynb  Copy_of_customized_speaker_selection.ipynb  JSON_mode_example.ipynb  agentchat_agentoptimizer.ipynb  agentchat_gemini-vision.ipynb  agentchat_gemini.ipynb  agentchat_groupchat_RAG.ipynb  agentchat_groupchat_customized copy.ipynb  agentchat_groupchat_customized.ipynb  agentchat_langchain-tools.ipynb  agentchat_multi_task_async_chats.ipynb  agentchat_society_of_mind.ipynb  agentchat_web_info.ipynb  brave-search.ipynb  customized_speaker_selection.ipynb  podcasters_modules.ipynb  podcasters_quickstart.ipynb
notebooks/brave/: apify_crawl.ipynb  constants.py  intro.ipynb  langchain.ipynb
notebooks/langchain/: hierarchical_agent_teams.ipynb  langgraph_search.ipynb
notebooks/langroid/: Langroid_quick_start.ipynb
notebooks/samba_api/: constants.py  intro.ipynb
notebooks/superlinked/: readme.ipynb
notebooks/upstage-retrieval/: README.md  docqa.py  retrieval.py
output/: tmp_code_0e761396d0577c59de6d0bd07038dbd0.py
outputs/assets/: search_result_20240713_183634.json  search_result_20240713_184608.json
outputs/conversations/: 20240629235449.txt  nested_json_20240703_083233.json  nested_json_20240715_214414.json  script_json_20240715_214605.json  script_json_20240717_003237.json  script_json_20240718_093854.json  script_json_20240719_171404.json  script_json_20240719_193559.json  script_json_20240726_030341.json  script_json_20240727_042209.json  (+3 more)
outputs/web/: 2308.08155.1  (+1 more)
tests/: evaluation_qa.json  test_all.py  test_main.py  test_podcast_group.py
utils/: portkey.py  registry.py  urls.py
(+136 files in other folders)
