[tool.poetry]
name = "thought-conv-agents"
version = "0.1.0"
description = "package for thoughtful agents partipating in stimulating conversations"
authors = ["supermomo668 <mymomo119966.mm@gmail.com>"]
license = "Apache2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-google-genai = "1.0.7"
openai = "1.35.13"
pandas = "2.2.2"
pillow = "10.4.0"
pydantic = "2.8.2"
python-dotenv = "1.0.1"
tqdm = "4.66.2"
duckduckgo-search = "6.1.12"
autogen = "1.0.16"
beartype = "0.18.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
